examples/test/testpolicy10088.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10088
  namespace: namespace327
spec:
  podSelector:
    matchLabels:
      key10: value41
      key47: value41
      key1: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value12
          key33: value18
      podSelector:
        matchLabels:
          key3: value26
